queue-manager-deployment/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: example
  namespace: default
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: example-default.apps.metrics.cp.fyre.ibm.com
  to:
    kind: Service
    name: example
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
status:
  ingress:
    - host: example-default.apps.metrics.cp.fyre.ibm.com
      routerName: default
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.metrics.cp.fyre.ibm.com
---
kind: Service
apiVersion: v1
metadata:
  name: example
  namespace: default
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: nginx
status:
  loadBalancer: {}
